unreadable buttons text fixed

--- a/src/app/game-content/game-content.component.scss
+++ b/src/app/game-content/game-content.component.scss
@@ -17,8 +17,12 @@
   }
 }
 
+.mat-dialog-actions {
+  justify-content: space-evenly;
+}
+
 .button {
-  color: #E8E7FF;
+  color: indigo;
   font-family: "Estedad-Regular", sans-serif;
 }
 
